# instagram

instagram/: alembic.ini  main.py  pyproject.toml  requirements.txt
instagram/migrations/: env.py
instagram/migrations/versions/: 2f6ca3767a65_init.py  6a53576d0c31_init.py  6cabb41d8c0b_init.py  91da75c38576_init.py  b0c9b60a8c33_init.py  bbfda3a044e6_init.py  bf7bcf447c76_init.py  e96cc14d4a29_init.py
instagram/src/: schemas.py
instagram/src/database/: db.py  models.py
instagram/src/repository/: author.py  quote.py  tags.py
instagram/src/routes/: author.py  quote.py  tags.py
